# FinSage

./: .env.example  .gitignore  GIT_WORKFLOW.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup_and_run.sh
checkpoints_trained/adaptive_final/: training_state.json
docs/: DynamicHedgeSelector_Design.md  FinSage_Architecture_Report.md  FinSage_Backtest_Results_Report.md  FinSage_Technical_Documentation_v2.md  FinSage_V2_Backtest_Report.md  MARFT_V4_Framework_Report.md  MARFT_V4_Framework_Report_.md  TRAINING_BUGS_V4.md  V2_Agent_Architecture.md  V2_Agent_IO_Detail.html  V2_Agent_IO_Detail.md
finsage/: __init__.py  cli.py  config.py
finsage/agents/: __init__.py  base_expert.py  factor_enhanced_expert.py  hedging_agent.py  manager_coordinator.py  portfolio_manager.py  position_sizing_agent.py  risk_controller.py
finsage/core/: __init__.py  orchestrator.py
finsage/data/: __init__.py  data_loader.py  dynamic_screener.py  enhanced_data_loader.py  fmp_client.py  intraday_loader.py  macro_loader.py  market_data.py
finsage/environment/: __init__.py  multi_asset_env.py  portfolio_state.py
finsage/factors/: __init__.py  base_factor.py  bond_factors.py  commodity_factors.py  crypto_factors.py  reits_factors.py  stock_factors.py
results/: FinSage_126天配置表_2024-06-03_2024-11-29.md  FinSage_深度研究报告_2024-06-03_2024-11-29.md  FinSage_详细持仓报告_2024-06-03_2024-11-29.md  README.md
scripts/: auto_download_and_cleanup.sh  auto_download_checkpoints.sh  batch_lora_train.py  debug_expert_train.py  evaluate_baseline_finagent.py  evaluate_baseline_finagent_fair.py  evaluate_baseline_fincon.py  evaluate_baseline_fincon_fair.py  evaluate_trained_lora.py  launch_3_experiments.sh  monitor_aggressive.sh  monitor_all_evals.sh  monitor_and_download.sh  monitor_eval_v2.sh  monitor_training_v4.sh  pre_training_check.py  run_backtest_with_llm.py  run_backtest_xgboost.py  run_marft_training.py  start_eval_v2.sh  train_marft_demo.py  train_shared_experts.py  train_v4_experiment.py  train_with_real_data_v4.py  validate_v1_full.py  vast_api_manager.py
tests/: test_agents.py  test_agents_deep.py  test_base_factor_deep.py  test_base_strategy_deep.py  test_base_tool_deep.py  test_black_litterman_deep.py  test_bond_expert_deep.py  test_bond_factors_deep.py  test_cli.py  test_commodity_expert_deep.py  test_commodity_factors_deep.py  test_config.py  test_copula_hedging_deep.py  test_core.py  test_core_satellite_deep.py  test_critic_deep.py  test_crypto_expert_deep.py  test_crypto_factors_deep.py  test_cvar_optimization_deep.py  test_data.py  test_data_loader_deep.py  test_dcc_garch_deep.py  test_dynamic_rebalancing_deep.py  test_dynamic_screener.py  test_dynamic_screener_deep.py  test_dynamic_selector_deep.py  test_enhanced_data_loader.py  test_enhanced_data_loader_deep.py  test_environment.py  test_experts_advanced.py  test_factor_enhanced_expert_deep.py  test_factor_hedging_deep.py  test_factor_scorers_deep.py  test_factors.py  test_fmp_client_deep.py  test_hedge_universe_deep.py  test_hedging.py  test_hedging_agent_deep.py  test_hedging_toolkit_deep.py  test_hedging_tools_advanced.py  (+40 more)
(+49 files in other folders)
